--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dom-to-image-more": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.510.0",
+    "pdfmake": "^0.2.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
@@ -39,7 +41,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/node": "^22.15.18",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
