--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dom-to-image-more": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.510.0",
     "pdfmake": "^0.2.20",
     "react": "^19.1.0",
