--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.510.0",
     "pdfmake": "^0.2.20",
     "react": "^19.1.0",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
+    "svg2pdf.js": "^2.5.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
